# PHARE

./: $  .gitignore  .nvimrc  \  lundquist_run119.py  reflux_debug.txt  reflux_debug_4r.txt  reflux_debug_rotor5.txt
.github/workflows/: cmake_ubuntu.yml
debug_reports/: reflux_corner_investigation.md
doc/source/: index.rst
doc/source/theory/hybrid/: index.rst
doc/source/theory/mhd/: finitevolumes.rst  index.rst  mhd.rst
docs/superpowers/specs/: 2026-04-02-mhd-hybrid-coupling-design.md
pyphare/pyphare/core/: box.py  gridlayout.py
pyphare/pyphare/cpp/: __init__.py
pyphare/pyphare/mock_mhd_simulator/: __init__.py  simulator.py
pyphare/pyphare/pharein/: __init__.py  diagnostics.py  maxwellian_fluid_model.py  mhd_model.py  restarts.py  simulation.py
pyphare/pyphare/pharein/initialize/: general.py  hybrid.py  mhd.py
pyphare/pyphare/pharesee/: geometry.py
pyphare/pyphare/pharesee/hierarchy/: fromh5.py  fromvtkhdf5.py  hierarchy.py  hierarchy_utils.py  patchdata.py  tensorfield.py
pyphare/pyphare/pharesee/phare_vtk/: __init__.py  base.py  plot.py
pyphare/pyphare/pharesee/run/: run.py  utils.py
pyphare/pyphare/simulator/: simulator.py
res/cmake/: test.cmake
res/sim/: all.txt  ssi_tests.txt  test_refactor.txt
src/: phare_amr.hpp  phare_core.hpp  phare_simulator_options.hpp  phare_solver.hpp
src/amr/: CMakeLists.txt  amr_constants.hpp  debugod.hpp  messenger_registration.hpp  multiphysics_integrator.hpp
src/amr/data/field/: field_data.hpp  field_data_factory.hpp  field_geometry.hpp  field_variable.hpp  field_variable_fill_pattern.hpp
src/amr/data/tensorfield/: tensor_field_data.hpp  tensor_field_data_factory.hpp  tensor_field_geometry.hpp
src/amr/level_initializer/: hybrid_level_initializer.hpp  level_initializer_factory.hpp  mhd_level_initializer.hpp
src/amr/messengers/: field_max_transaction.hpp  hybrid_hybrid_messenger_strategy.hpp  hybrid_messenger_info.hpp  messenger_factory.hpp  messenger_utils.hpp  mhd_hybrid_messenger_strategy.hpp  mhd_hybrid_particle_injection_patch_strategy.hpp  mhd_messenger.hpp  mhd_messenger_info.hpp  refiner.hpp  refiner_pool.hpp
src/amr/messengers/hybrid_hybrid/: hybrid_border_comms.hpp  hybrid_reflux_comms.hpp
src/amr/physical_models/: hybrid_model.hpp  mhd_model.hpp
src/amr/resources_manager/: resources_manager.hpp  tensor_field_resource.hpp
src/amr/solvers/: mhd_inactive_cell_reset.hpp  solver.hpp  solver_mhd.hpp  solver_mhd_model_view.hpp  solver_ppc.hpp
src/amr/tagging/: default_tagger_strategy.hpp
src/amr/wrappers/: hierarchy.hpp
src/core/: CMakeLists.txt  logger.hpp  physical_quantities.hpp
src/core/boundary/: boundary_defs.hpp  boundary_factory.hpp
src/core/hybrid/: hybrid_quantities.hpp
src/core/inner_boundary/: field_antisymmetric_inner_boundary_condition.hpp  field_dirichlet_inner_boundary_condition.hpp  field_inner_boundary_condition.hpp  field_neumann_inner_boundary_condition.hpp  field_symmetric_inner_boundary_condition.hpp  inner_boundary_condition_factory.hpp  inner_boundary_manager.hpp  inner_boundary_mesh_classifier.hpp  inner_boundary_mesh_data.hpp
src/core/mhd/: mhd_quantities.hpp
src/core/models/: hybrid_state.hpp  mhd_state.hpp
src/core/numerics/: time_integrator_utils.hpp
src/core/utilities/: algorithm.hpp  ghost_width_calculator.hpp  mpi_utils.hpp  types.hpp
src/diagnostic/: diagnostic_model_view.hpp  diagnostic_props.hpp
src/diagnostic/detail/: h5writer.hpp  vtkh5_type_writer.hpp  vtkh5_writer.hpp
src/python3/: CMakeLists.txt  cpp_mhd_parameters.hpp  cpp_mhd_python_registerer.hpp  cpp_simulator.hpp  data_wrangler.hpp  mhd_resolver.hpp  patch_level.hpp  pyMHD.cpp
src/python3/mhd_defaults/: default_mhd_registerer.hpp  default_mhd_time_stepper.hpp  mhd_defaults.hpp
src/simulator/: phare_types.hpp  simulator.hpp
tests/amr/models/: test_models.cpp
tests/amr/resources_manager/: test_resources_manager.cpp  test_resources_manager.hpp
tests/amr/tagging/: test_tagging.cpp
tests/core/numerics/convergence/: CMakeLists.txt  convergence_test_framework.hpp  exact_solutions.hpp  hall_convergence_test_common.hpp  test_decomposed_flux_pipeline.cpp  test_hall_compute_flux_convergence.cpp  test_hall_convergence.cpp  test_ideal_compute_flux_convergence.cpp  test_instrumented_flux_pipeline.cpp  test_mhd_init_convergence.cpp
tests/core/numerics/inner_boundary_condition/: CMakeLists.txt  test_field_dirichlet_inner_boundary_condition.cpp  test_field_neumann_inner_boundary_condition.cpp  test_field_symmetric_inner_boundary_condition.cpp
tests/diagnostic/: job_2d.py.in
tests/functional/harris/: harris_2d.py  harris_2d_diff.py  harris_3d.py
tests/functional/mhd_alfven2d/: CMakeLists.txt  alfven2d.py
tests/functional/mhd_convergence/: convergence.py  isolate_order_reduction.py  whistler_convergence.py
tests/functional/mhd_dispersion/: whistler1d.py
tests/functional/mhd_flow_around_a_cylinder/: CMakeLists.txt  case.py  plot_field_lines.pvsm
tests/functional/mhd_harris/: harris.py
tests/functional/mhd_hybrid_harris/: CMakeLists.txt  mhd_hybrid_harris_2d.py
tests/functional/mhd_inner_boundary/: sphere_init.py
tests/functional/mhd_multidimensional_convergence/: hydro_convergence.py  whistler_init_order.py  whistler_multid_convergence.py  whistler_multid_convergence_short.py
tests/functional/mhd_orszagtang/: orszag_tang.py
tests/functional/mhd_orszagtang_3d/: CMakeLists.txt  orszag_tang_3d.py
tests/functional/mhd_rotor/: rotor.py
tests/functional/mhd_shock/: mhd_shock.py  mhd_shock_3d.py
tests/functional/mhd_ssi/: CMakeLists.txt  ssi_convergence.py  ssi_shock.py
tests/initializer/: init_functions.hpp
tests/simulator/: __init__.py  per_test.hpp  refined_particle_nbr.py  test_advance.py  test_diagnostics.py  test_initialization.py  test_restarts.py  test_vtk_diagnostics.py
tests/simulator/advance/: test_fields_advance_3d.py  test_particles_advance_3d.py
tests/simulator/mhd/: CMakeLists.txt  test_mhd_tools.py
tools/: diff_diags.py  merge_vtkhdf.py
tools/paraview/macros/: load_phare_vtkhdf.py
tools/python3/: test_vtk.py
(+201 files in other folders)
